--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,16 @@
 p {
     font-family:'helvetica neue', Helvetica, sans-serif;
     letter-spacing: 1px;
-    text-transform: uppercase;
     text-align: center;
-    border:  2px solid rgba(0,0,200,0.6);
+    border:  2px solid rgba(43, 17, 92, 0.6);
     color: rgba(0,0,200,0.6);
     box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
     border-radius: 10px;
     padding: 3px 10px;
     display: inline-block;
     cursor: pointer;
+}
+
+.btn {
+    margin-left: 25px;
 }
